#------------------------------------------------------------------------------#
# Top-level Makefile.am
#------------------------------------------------------------------------------#

#------------------------------------------------------------------------------#
# Recurse subdires
#------------------------------------------------------------------------------#

SUBDIRS = lib bin @DOC@

#------------------------------------------------------------------------------#
# Extra distribution files
#------------------------------------------------------------------------------#

EXTRA_DIST = src/hm_hash.hh

#------------------------------------------------------------------------------#
# Build documentation
#------------------------------------------------------------------------------#

doc: FORCE
	@([ -d @DOC@ ] && cd @DOC@ && make doc > doxygen.log 2>&1)

#------------------------------------------------------------------------------#
# Dummy rule
#------------------------------------------------------------------------------#

FORCE:
