#------------------------------------------------------------------------------#
# Top-level Makefile.am
#------------------------------------------------------------------------------#

#------------------------------------------------------------------------------#
# Recurse subdires
#------------------------------------------------------------------------------#

SUBDIRS = lib bin @DOC@

#------------------------------------------------------------------------------#
# Extra distribution files
#------------------------------------------------------------------------------#

EXTRA_DIST = src/hm_hash.hh

#------------------------------------------------------------------------------#
# Build documentation
#------------------------------------------------------------------------------#

doc: FORCE
	@([ -d @DOC@ ] && cd @DOC@ && make doc > doxygen.log 2>&1)

#------------------------------------------------------------------------------#
# Extra install exec
#------------------------------------------------------------------------------#

install-exec-hook:
	@(cp ${top_builddir}/local/hm_config.h ${includedir})

#------------------------------------------------------------------------------#
# Extra install data
#------------------------------------------------------------------------------#

install-data-hook:
	@([ -d ${top_builddir}/@DOC@ ] && \
		([ -d ${mandir} ] || mkdir -p ${mandir}) && \
		([ -d ${top_builddir}/doc/man ] && \
			cp -r ${top_builddir}/doc/man/* ${mandir}))

#------------------------------------------------------------------------------#
# Dummy rule
#------------------------------------------------------------------------------#

FORCE:
